# CppGc

./: .gitignore  CMakeLists.txt  Readme.md
src/: GC.cpp  GC.hpp  MyObject.cpp  MyObject.hpp  benchmark.cpp  main.cpp
tests/: CMakeLists.txt  test_cp.cpp  test_gc.cpp
